--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 </head>
 
 <body>
-    <ul class="list-student">
-        
-    </ul>
+    <div class="header"></div>
+    <div class="content">Home</div>
+    <div class="footer"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
         integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
